[gd_scene load_steps=22 format=2]

[ext_resource path="res://Resource/Font/RoboSlab/RobotoSlab-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resource/StyleBox/CalendarMonthNumbers.tres" type="StyleBox" id=2]
[ext_resource path="res://Resource/StyleBox/CalendatWeek.tres" type="StyleBox" id=3]
[ext_resource path="res://Script/NewGroupUI.gd" type="Script" id=4]
[ext_resource path="res://Script/NewGroupMain.gd" type="Script" id=5]
[ext_resource path="res://Resource/StyleBox/MainButtonPressed.tres" type="StyleBox" id=6]
[ext_resource path="res://Resource/StyleBox/MainButtonNormal.tres" type="StyleBox" id=7]
[ext_resource path="res://Resource/StyleBox/MainButtonDisable.tres" type="StyleBox" id=8]
[ext_resource path="res://Resource/Music/ES_Keyboard Typing - SFX Producer.mp3" type="AudioStream" id=9]

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 0.0588235 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.75, 0.651, 0.5025, 1 )
border_width_top = 4
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="DynamicFont" id=13]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.952941, 0.870588, 0.964706 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0.952941, 0.87451, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.913725, 0.760784, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=6]
size = 19
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.3239, 0.79, 0.595792, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="DynamicFont" id=7]
size = 19
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.96, 0.83328, 0.6432, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="NewGroup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -600.0
margin_bottom = -1024.0
script = ExtResource( 5 )

[node name="Button" type="Control" parent="."]
margin_left = 25.0
margin_top = 330.0
margin_right = 65.0
margin_bottom = 370.0

[node name="Shadow" type="Panel" parent="Button"]
margin_left = -5.0
margin_right = 405.0
margin_bottom = 125.0
custom_styles/panel = SubResource( 15 )

[node name="Box" type="Panel" parent="Button"]
margin_right = 400.0
margin_bottom = 120.0
rect_min_size = Vector2( 400, 120 )
custom_styles/panel = SubResource( 14 )

[node name="Button" type="Button" parent="Button"]
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 7 )
enabled_focus_mode = 0
text = "New Group"

[node name="UI" type="Control" parent="."]
visible = false
margin_left = 25.0
margin_top = 399.0
margin_right = 575.0
margin_bottom = 624.0
rect_min_size = Vector2( 550, 225 )
script = ExtResource( 4 )

[node name="Background" type="Control" parent="UI"]

[node name="Layer1" type="Panel" parent="UI/Background"]
margin_right = 550.0
margin_bottom = 225.0
rect_min_size = Vector2( 550, 225 )
custom_styles/panel = SubResource( 4 )

[node name="Layer2" type="Panel" parent="UI/Background"]
margin_right = 550.0
margin_bottom = 225.0
rect_min_size = Vector2( 550, 225 )
custom_styles/panel = SubResource( 5 )

[node name="Button" type="Control" parent="UI"]

[node name="Back" type="Button" parent="UI/Button"]
margin_left = 10.0
margin_top = 10.0
margin_right = 106.0
margin_bottom = 42.0
rect_min_size = Vector2( 96, 32 )
focus_mode = 0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
text = "Back"

[node name="Done" type="Button" parent="UI/Button"]
margin_left = 444.0
margin_top = 10.0
margin_right = 540.0
margin_bottom = 42.0
rect_min_size = Vector2( 96, 32 )
focus_mode = 0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
enabled_focus_mode = 0
text = "Done"

[node name="InputBox" type="Control" parent="UI"]

[node name="Name" type="LineEdit" parent="UI/InputBox"]
margin_left = 75.0
margin_top = 78.0
margin_right = 475.0
margin_bottom = 126.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
align = 1
placeholder_text = "Group Name"
placeholder_alpha = 0.45

[node name="Amount" type="LineEdit" parent="UI/InputBox"]
margin_left = 75.0
margin_top = 142.0
margin_right = 475.0
margin_bottom = 190.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 10 )
align = 1
placeholder_text = "Group Amount"
placeholder_alpha = 0.45

[node name="OnHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 5.0
pitch_scale = 2.0

[connection signal="mouse_entered" from="Button/Button" to="." method="Onhover"]
[connection signal="mouse_exited" from="Button/Button" to="." method="OnHoverExit"]
[connection signal="pressed" from="Button/Button" to="." method="OnOpenUI"]
[connection signal="pressed" from="UI/Button/Back" to="." method="OnCloseUI"]
[connection signal="pressed" from="UI/Button/Done" to="UI" method="OnDone"]
[connection signal="text_changed" from="UI/InputBox/Name" to="UI" method="_on_Name_text_changed"]
[connection signal="text_changed" from="UI/InputBox/Amount" to="UI" method="_on_Amount_text_changed"]
